[project]
name = "vf-nemotron-multihop"
version = "0.1.0"
description = "Multi-hop (3-6-9) multi-turn tool-use environment"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.14.0",
    "openai>=1.40.0",
    "verifiers>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vf_nemotron_multihop"]

[project.entry-points."verifiers.environments"]
vf-nemotron-multihop = "vf_nemotron_multihop:load_environment"


